--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Meet Kelli</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <h1>Kelli, 15</h1>
+      <img src="Kelli Pics/Kelli in camper on bed.jpg" alt="Picture of Kelli on camper bed" width="500" height="600">
+      <h2>Facts about Siamese Cats</h2>
+      <p>"Siamese cats are social, affectionate, clever animals who make loving and loyal pets. Described as being "dog-like," these kitties mesh well into most families."</p>
+      <a href="https://www.dailypaws.com/cats-kittens/cat-breeds/siamese">source</a>
+
+      <img src="Kelli Pics/Kelli putting up with a hair tie on ear.jpg" alt="Picture of Kelli being patient" width="500" height="600">
+      <h2>Facts about Siamese Cats</h2>
+      <p>Siamese are not aggressive cats, and their gentle, loving nature has made them a favorite cat for families with children.</p>
+      <a href="https://cats.lovetoknow.com/cat-breeds/siamese-cat-personality-behavior">source</a>
+      
+      <img src="Kelli Pics/Kelli traveling in truck.jpg" alt="Picture of Kelli in truck" width="500" height="600">
+      <h2>Facts about Siamese Cats</h2>
+      <p>The Siamese cat breed is a beautiful cat with large ears and baby blue eyes. It is an outgoing cat that relies heavily on human companionship. This breed tends to get lonely and sad if left alone for long periods of time, which makes it the perfect feline adventure companion.</p>
+      <a href="https://adventurouscat.com/cat-breeds-that-like-to-travel/">source</a>
+
+      <img src="Kelli Pics/Kelli with girls.jpg" alt="Picture of Kelli with Abi" width="500" height="600">
+      <h2>Facts about Siamese Cats</h2>
+      <p>Although they love a good snuggle on a warm lap, they also have high energy levels, which means it’s important to interact with them (they easily learn to ‘fetch’), and ensure they have plenty of fun toys. Siamese cats have a good tolerance for children – as long as they’re taught how to interact with cats – and will also form firm friendships with the family dog..</p>
+      <a href="https://uk.mypetandi.com/new-owners/so-you-re-thinking-about-getting-siamese-cat/">source</a>
    </body>
 </html>
