--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <header>
       <title>Meet Kelli</title>
       <link rel="stylesheet" href="styles.css">
-   </head>
+   </header>
    <body>
       <!-- Write your HTML in this file! -->
       <h1  id = "mainHeading">Meet Kelli!</h1>
